--- a/Presentation/PresentationWebApp/Views/Shared/_Layout.cshtml
+++ b/Presentation/PresentationWebApp/Views/Shared/_Layout.cshtml
@@ -28,6 +28,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Support" asp-action="Contact">Contact Us</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Products" asp-action="Index">Products List</a>
+                        </li>
                     </ul>
                 </div>
             </div>
