--- a/Presentation/PresentationWebApp/Views/Products/Index.cshtml
+++ b/Presentation/PresentationWebApp/Views/Products/Index.cshtml
@@ -16,7 +16,7 @@
 <div class="container">
     <div class="row">
         
-        @Html.Partial("ViewProductsPartial", Model);
+        @Html.Partial("ViewProductsPartial", Model)
     </div>
 
 
