--- a/Presentation/PresentationWebApp/Views/Carts/Index.cshtml
+++ b/Presentation/PresentationWebApp/Views/Carts/Index.cshtml
@@ -15,7 +15,8 @@
     </div>
     @if (Model.Count() > 0)
     {
-        <button class="mt-3 btn btn-block btn-primary">Checkout!</button>
+        <a class="btn btn-block btn-success mt-3" href="/Carts/Checkout">Checkout</a>
+                
     }
 
 
