--- a/Presentation/PresentationWebApp/Views/Shared/ViewProductsPartial.cshtml
+++ b/Presentation/PresentationWebApp/Views/Shared/ViewProductsPartial.cshtml
@@ -21,7 +21,7 @@
                     }
 
                     
-                    <form asp-controller="Carts" asp-action="AddToCart">
+                    <form method="post" asp-controller="Carts" asp-action="AddToCart">
                         <div class="row mt-2">
                             <div class="col-4">
                                 <input type="number" class="form-control" placeholder="Quantity" min="1" value="1" name="quantity" id="quantity" />
