--- a/Presentation/PresentationWebApp/Views/Carts/Index.cshtml
+++ b/Presentation/PresentationWebApp/Views/Carts/Index.cshtml
@@ -5,18 +5,21 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>Current User Cart</h1>
+<h1>Cart</h1>
 
 <div class="container">
-    <div class="row">
+    
 
-        @Html.Partial("ViewCartPartial", Model)
+    @Html.Partial("ViewCartPartial", Model)
 
-    </div>
+    
     @if (Model.Count() > 0)
     {
         <a class="btn btn-block btn-success mt-3" href="/Carts/Checkout">Checkout</a>
                 
+    }
+    else{ 
+        <h3>You have nothing in your cart, add some!</h3>
     }
 
 
