--- a/Presentation/PresentationWebApp/Views/Shared/SearchPartial.cshtml
+++ b/Presentation/PresentationWebApp/Views/Shared/SearchPartial.cshtml
@@ -1,10 +1,32 @@
-﻿<form class="form-inline" method="post" action="/Products/Search">
-    <div class="col-auto">
-        <label>Search:</label>
+﻿<div class="row">
+    <div class="col-md-6 col-sm-12">
+        <form class="form-inline" method="post" action="/Products/Search">
+            <div class="col-auto">
+                <label>Search:</label>
+            </div>
+            <div class="form-group mx-sm-3 mb-2">
+                <input type="text" class="form-control" placeholder="Type your keyword here" name="keyword" />
+            </div>
+            <button type="submit" class="btn btn-dark mb-2">Search</button>
+        </form>
     </div>
-    <div class="form-group mx-sm-3 mb-2">
-        <input type="text" class="form-control" placeholder="Type your keyword here" name="keyword" />
-    </div>
-    <button type="submit" class="btn btn-primary mb-2">Search</button>
-</form>
 
+    <div class="col-md-6 col-sm-12">
+        <form class="form-inline" method="post" action="/Products/CategorySearch">
+            <div class="col-auto">
+                <label>Category Search:</label>
+            </div>
+            <div class="form-group mx-sm-3 mb-2">
+                <select id="category" name="category" class="form-control">
+                    <!--We need to populate this dropdown with a list of categories we should fetch from the db-->
+                    @foreach (var category in ViewBag.Categories)
+                    {
+                        <option value="@category.Id">@category.Name</option>
+                    }
+                </select>
+            </div>
+
+            <button type="submit" class="btn btn-dark mb-2">Search</button>
+        </form>
+     </div>
+</div>
