--- a/Presentation/PresentationWebApp/Views/Products/Index.cshtml
+++ b/Presentation/PresentationWebApp/Views/Products/Index.cshtml
@@ -1,5 +1,6 @@
 ﻿@model IEnumerable<ShoppingCart.Application.ViewModels.ProductViewModel>
-
+@using X.PagedList.Mvc.Core;
+@using X.PagedList;
 
 @{
     ViewData["Title"] = "Index";
@@ -15,10 +16,25 @@
 
 <div class="container">
     <div class="row">
-        
+
         @Html.Partial("ViewProductsPartial", Model)
     </div>
 
+    <!--Example used for pagination https://www.youtube.com/watch?v=vnxN_zBisIo&ab_channel=ErcanEker -->
+    <div class="mt-3">
+        @Html.PagedListPager((IPagedList)Model, page => Url.Action("Index", new
+        {
+            page = page }),
+            new X.PagedList.Mvc.Common.PagedListRenderOptions
+                {
+                DisplayItemSliceAndTotal = false,
+                DisplayPageCountAndCurrentLocation = false,
+                ContainerDivClasses = new[] { "navigation" },
+                LiElementClasses = new[] { "page-item" },
+                PageClasses = new[] { "page-link list-group-item-dark list-group-item-action bg-dark text-light" },
+            })
+
+    </div>
 
 </div>
 
