--- a/Presentation/PresentationWebApp/Views/Products/Create.cshtml
+++ b/Presentation/PresentationWebApp/Views/Products/Create.cshtml
@@ -26,17 +26,17 @@
                 <textarea asp-for="Description" class="form-control" cols="3">Description</textarea>
                 <span asp-validation-for="Description" class="text-danger"></span>
             </div>
-            <!--
+           
             <div class="form-group">
                 <label asp-for="Stock" class="control-label"></label>
                 <input asp-for="Stock" class="form-control" />
                 <span asp-validation-for="Stock" class="text-danger"></span>
             </div>
-            -->
+            
             <div class="form-group">
                 <label class="control-label">Image Url</label>
-                <input asp-for="ImageUrl" class="form-control" />
-                <input name="f" class="form-control" type="file" />
+                <!-- <input asp-for="ImageUrl" class="form-control" /> -->
+                <input asp-for="ImageUrl" name="f" class="form-control" type="file" />
 
 
                 <span asp-validation-for="ImageUrl" class="text-danger"></span>
