--- a/Presentation/PresentationWebApp/Views/Products/Details.cshtml
+++ b/Presentation/PresentationWebApp/Views/Products/Details.cshtml
@@ -34,6 +34,12 @@
                     &euro;@Html.DisplayFor(model => model.Price)
                 </dd>
                 <dt class="col-sm-2">
+                    @Html.DisplayNameFor(model => model.Stock)
+                </dt>
+                <dd class="col-sm-10">
+                    @Html.DisplayFor(model => model.Stock)
+                </dd>
+                <dt class="col-sm-2">
                     @Html.DisplayNameFor(model => model.Description)
                 </dt>
                 <dd class="col-sm-10">
@@ -47,13 +53,13 @@
                                 <input type="hidden" name="productId" id="productId" value="@Html.DisplayFor(model => model.Id)" />
                             </div>
                             <div class="col-8">
-                                <input type="submit" value="Add To Cart" class="btn btn-block btn-success" />
+                                <input type="submit" value="Add To Cart" class="btn btn-block btn-warning" />
                             </div>
                         </div>
                     </form>
 
                 </dt>
-                
+
             </dl>
 
         </div>
