--- a/Presentation/PresentationWebApp/Views/Products/Index.cshtml
+++ b/Presentation/PresentationWebApp/Views/Products/Index.cshtml
@@ -20,11 +20,13 @@
         @Html.Partial("ViewProductsPartial", Model)
     </div>
 
+
     <!--Example used for pagination https://www.youtube.com/watch?v=vnxN_zBisIo&ab_channel=ErcanEker -->
     <div class="mt-3">
         @Html.PagedListPager((IPagedList)Model, page => Url.Action("Index", new
         {
-            page = page }),
+            page = page
+        }),
             new X.PagedList.Mvc.Common.PagedListRenderOptions
                 {
                 DisplayItemSliceAndTotal = false,
@@ -35,6 +37,11 @@
             })
 
     </div>
+
+    @if (User.IsInRole("Admin"))
+    {
+        <a href="/Products/Create" class="btn btn-dark mt-3">Add Product</a>
+    }
 
 </div>
 
