Commit 9 - Error page redirection implemented, Deployment Profile set up fully, ready to deplot

--- a/Presentation/PresentationWebApp/Views/Shared/ViewProductsPartial.cshtml
+++ b/Presentation/PresentationWebApp/Views/Shared/ViewProductsPartial.cshtml
@@ -3,7 +3,7 @@
 
 @foreach (var p in Model)
 {
-    <div class="col-4 mt-5">
+    <div class="col-md-4 col-sm-12 mt-5">
         <div class="card">
             <img src="@p.ImageUrl" class="card-img-top img-thumbnail" style="height:300px;" alt="...">
             <div class="card-body">
@@ -40,8 +40,6 @@
                     </form>
 
                 }
-
-
 
             </div>
         </div>
