--- a/Presentation/PresentationWebApp/Views/Shared/ViewCartPartial.cshtml
+++ b/Presentation/PresentationWebApp/Views/Shared/ViewCartPartial.cshtml
@@ -4,7 +4,7 @@
 <div class="row row-cols-3">
     @foreach (var c in Model)
     {
-        <div class="col-4 mt-5">
+        <div class="col-md-4 col-sm-12 mt-5">
             <div class="card">
                 <img src="@c.Product.ImageUrl" class="card-img-top img-thumbnail" style="height:300px;" alt="...">
                 <div class="card-body">
